--- a/src/jvmMain/resources/application.conf
+++ b/src/jvmMain/resources/application.conf
@@ -1,10 +1,10 @@
 ktor {
     deployment {
         port = 8080
-        host = 127.0.0.1
+        host = localhost.charlesproxy.com
     }
 
     application {
-        modules = [ sample.ApplicationDemoKt.module ]
+        modules = [ wechat.open.ApplicationWeChatOpenKt.module ]
     }
 }
