--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap/' }
     maven { url 'https://dl.bintray.com/kotlin/kotlin-dev/' }
 }
-def ktor_version = '1.0.1'
+def ktor_version = '1.1.2'
+def kotlinx_coroutines_version = '1.1.1'
 def logback_version = '1.2.3'
 
 kotlin {
@@ -63,10 +64,14 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$kotlinx_coroutines_version"
+
                 implementation "io.ktor:ktor-server-netty:$ktor_version"
                 implementation "io.ktor:ktor-html-builder:$ktor_version"
                 implementation "io.ktor:ktor-freemarker:$ktor_version"
                 implementation "io.ktor:ktor-auth:$ktor_version"
+                implementation "io.ktor:ktor-auth-jwt:$ktor_version"
+                implementation "io.ktor:ktor-gson:$ktor_version"
                 implementation "org.jetbrains:kotlin-css-jvm:+"
                 implementation "ch.qos.logback:logback-classic:$logback_version"
             }
@@ -92,8 +97,14 @@ kotlin {
         backendMain {
             dependsOn jvmMain
         }
+        backendTest {
+            dependsOn jvmTest
+        }
         frontendMain {
             dependsOn jsMain
+        }
+        frontendTest {
+            dependsOn jsTest
         }
     }
 }
