--- a/src/jvmMain/resources/application.conf
+++ b/src/jvmMain/resources/application.conf
@@ -1,7 +1,8 @@
 ktor {
     deployment {
         port = 8080
-        host = localhost.charlesproxy.com
+        host = 127.0.0.1
+        watch = [ src ]
     }
 
     application {
